fix map not displayed first time on resized windows

--- a/src/Modules/Laser.Orchard.Maps/Views/Parts/Map.cshtml
+++ b/src/Modules/Laser.Orchard.Maps/Views/Parts/Map.cshtml
@@ -91,6 +91,7 @@
         }
 
         google.maps.event.addDomListener(window, 'load', @("initialize" + ID) );
+        google.maps.event.trigger(map, 'resize');
     </script>
     }
     <fieldset class="map">
