Squashed commit of the following:
commit 9a1f748cee146b26f8b8157affddbc24f1adf629
Author: HermesSbicego-Laser <hermes.sbicego@laser-group.com>
Date:   Thu Dec 6 09:20:29 2018 +0100

    - refactoring properties for better understanding JSON values

commit 6adede68c3fb64b70811833130263f387db490fc
Author: HermesSbicego-Laser <hermes.sbicego@laser-group.com>
Date:   Thu Dec 6 00:46:03 2018 +0100

    Hierarchical settings for Contrib Widget. Allow to set available Widgets per available Zones

--- a/src/Modules/Contrib.Widgets/Views/DefinitionTemplates/WidgetsContainerSettingsViewModel.cshtml
+++ b/src/Modules/Contrib.Widgets/Views/DefinitionTemplates/WidgetsContainerSettingsViewModel.cshtml
@@ -2,6 +2,15 @@
 
 <fieldset>
     <div>
+        @Html.CheckBoxFor(m => m.UseHierarchicalAssociation)
+        @Html.LabelFor(m => m.UseHierarchicalAssociation, T("Use hierarchical association").Text, new { @class="forcheckbox"})
+    </div>
+    <div data-controllerid="@Html.FieldIdFor(m => m.UseHierarchicalAssociation)">
+        @Html.LabelFor(m => m.HierarchicalAssociationJson, T("Hierarchical association:"))
+        @Html.TextAreaFor(m => m.HierarchicalAssociationJson, new { @class = "text large" })
+        <span class="hint">@T("Insert the JSON object defining Zones and Widgets. JSON example: [{ \"ZoneName\":\"AsideFirst\",\"Widgets\":[{\"WidgetType\":\"ContentWidget\"}]},{ \"ZoneName\":\"AfterContent\",\"Widgets\":[{\"WidgetType\":\"HtmlWidget\"},{\"WidgetType\":\"TextWidget\"}]}]")</span>
+    </div>
+    <div>
         @Html.LabelFor(m => m.SelectedZones, T("Allowed zones:"))
         @Html.ListBoxFor(m => m.SelectedZones, new MultiSelectList(Model.Zones), new { style = "display:block;" })
         <span class="hint">@T("Select the zones where the widgets can be placed. If no zone is selected all of them will be available.")</span>
