--- a/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
+++ b/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
@@ -38,8 +38,7 @@
                 cookiesettings.cookiePolicyLink = '@part.cookiePolicyLink';
         }
         // user options
-        cookiesettings.cookieMessage = cookiesettings.cookieMessage + '<form><div style="border:solid 1px black">';
-        cookiesettings.cookieMessage = cookiesettings.cookieMessage + '<input type="checkbox" id="chkTechnical" value="Technical" checked disabled/><label for="chkTechnical">@T("Technical")</label>';
+        cookiesettings.cookieMessage = cookiesettings.cookieMessage + '<form><div>';
         cookiesettings.cookieMessage = cookiesettings.cookieMessage + '@Html.Raw(gdprScriptService.GetBannerChoices())';
         cookiesettings.cookieMessage = cookiesettings.cookieMessage + '</div></form>';
         // positioning
@@ -57,9 +56,15 @@
         cookiesettings.cookieResetButton = @cookieResetButton;
         if ('@part.cookieResetButtonText'.length > 0)
             cookiesettings.cookieResetButtonText = '@part.cookieResetButtonText';
+        cookiesettings.cookieExpectedValue = "@Html.Raw(gdprScriptService.GetCurrentCookiePrefix())";
+        cookiesettings.cookieAccepted = (@gdprScriptService.IsCookieAccepted() == 1);
 
         $.cookieCuttr(cookiesettings);
     });
 </script>
+
+        foreach(var cookie in gdprScriptService.GetAllowedCookies()) {
+            <text>@Html.Raw(cookie.GetScript())</text>
+        }
     }
 }
