--- a/src/Modules/Laser.Orchard.AdvancedSearch/Views/Admin/List.cshtml
+++ b/src/Modules/Laser.Orchard.AdvancedSearch/Views/Admin/List.cshtml
@@ -19,8 +19,8 @@
     var pageTitle = T("Manage Content");
     var createLinkText = T("Create New Content");
     if (!string.IsNullOrWhiteSpace(typeDisplayName)) {
-        pageTitle = T("Manage {0} Content", typeDisplayName);
-        createLinkText = T("Create New {0}", typeDisplayName);
+        pageTitle = T("Manage {0} Content", Html.Raw(typeDisplayName));
+        createLinkText = T("Create New {0}", Html.Raw(typeDisplayName));
     }
     Layout.Title = pageTitle;
 }
@@ -444,22 +444,13 @@
                     </div>
                 </div>
 
-
-
-
             </div>
             <div class="box-footer align-right padding-right-35">
                 <button id="applyFiltersButton" type="submit" name="submit.Filter" value="yes please">@T("Apply")</button>
             </div>
             <!-- /.box-body -->
         </div>
-    </div>
-    
-
-    
-
-    
-    
+    </div>    
     
     <fieldset class="contentItems bulk-items">
         @Display(Model.ContentItems)
