--- a/src/Modules/Laser.Orchard.Cookies/Views/EditorTemplates/Parts.Cookie.Settings.cshtml
+++ b/src/Modules/Laser.Orchard.Cookies/Views/EditorTemplates/Parts.Cookie.Settings.cshtml
@@ -53,6 +53,24 @@
 </fieldset>
 
 <fieldset>
+    <div>
+        @Html.EditorFor(m => m.defaultValuePreferences)
+        <label class="forcheckbox" for="CookieSettings_defaultValuePreferences">@T("Propose Preferences choice as selected")</label>
+        <span class="hint">@T("Check to suggest the user to accept Preferences cookies.")</span>
+    </div>
+    <div>
+        @Html.EditorFor(m => m.defaultValueStatistical)
+        <label class="forcheckbox" for="CookieSettings_defaultValueStatistical">@T("Propose Statistical choice as selected")</label>
+        <span class="hint">@T("Check to suggest the user to accept Statistical cookies.")</span>
+    </div>
+    <div>
+        @Html.EditorFor(m => m.defaultValueMarketing)
+        <label class="forcheckbox" for="CookieSettings_defaultValueMarketing">@T("Propose Marketing choice as selected")</label>
+        <span class="hint">@T("Check to suggest the user to accept Marketing cookies.")</span>
+    </div>
+</fieldset>
+
+<fieldset>
     <legend>@T("Impostazioni GDPR")</legend>
     <div>
         <label for="@Html.FieldIdFor(m => m.DisableCookieGDPRManagement)">@T("Disable GDPR Cookie Management")</label>
