Added import of shape providing tokenization autocomplete to the fields to configure HiddenStringFields

--- a/src/Modules/Laser.Orchard.HiddenFields/Views/DefinitionTemplates/HiddenStringFieldSettingsEventsViewModel.cshtml
+++ b/src/Modules/Laser.Orchard.HiddenFields/Views/DefinitionTemplates/HiddenStringFieldSettingsEventsViewModel.cshtml
@@ -33,3 +33,5 @@
         <span class="hint">@T("Selecting a value different than None will start a background update of these hidden fields.")</span>
     </div>
 </fieldset>
+
+@Display.TokenHint()
