--- a/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
+++ b/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
@@ -18,7 +18,8 @@
     var isPolicyPage = Model.isPolicyPage;
 
     using (Script.Foot()) {
-<script type="text/javascript">
+        if (settings.DisableCookieGDPRManagement == false) {
+            <script type="text/javascript">
     $(document).ready(function () {
         var cookiesettings = {};
         cookiesettings.cookieAnalytics = @cookieAnalytics;
@@ -68,9 +69,10 @@
 
         $.cookieCuttr(cookiesettings);
     });
-</script>
+            </script>
+        }
 
-        foreach(var cookie in gdprScriptService.GetAllowedCookies()) {
+        foreach (var cookie in gdprScriptService.GetAllowedCookies()) {
             <text>@Html.Raw(cookie.GetScript())</text>
         }
     }
