changed interface ICookieGDPR and managed multi script modules (Google Analytics for instance)

--- a/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
+++ b/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
@@ -73,7 +73,7 @@
         }
 
         foreach (var cookie in gdprScriptService.GetAllowedCookies()) {
-            <text>@Html.Raw(cookie.GetScript())</text>
+            <text>@Html.Raw(cookie.GetScript(gdprScriptService.GetAcceptedCookieTypes()))</text>
         }
     }
 }
