Added ShowDataReports permission to display reporting menu Added JQuery to shape for DynamicProjections, so it works also without our back end theme

--- a/src/Modules/Laser.Orchard.ContentExtension/Views/DynamicProjectionDisplay/List.cshtml
+++ b/src/Modules/Laser.Orchard.ContentExtension/Views/DynamicProjectionDisplay/List.cshtml
@@ -23,6 +23,8 @@
     IContentManager _contentManager;
     WorkContext.TryResolve<IContentManager>(out _contentManager);
     Layout.Title = Model.Part.AdminMenuText;
+
+    Script.Require("JQuery").AtHead();
 }
 
 <form id="FormAjaxList" method="get">
