--- a/src/Modules/Laser.Orchard.ContentExtension/Views/DynamicProjectionDisplay/List.cshtml
+++ b/src/Modules/Laser.Orchard.ContentExtension/Views/DynamicProjectionDisplay/List.cshtml
@@ -4,7 +4,6 @@
     $(document).ready(function () {
         $(":button.primaryAction").hide();
         $("#FormAjaxList").submit(function (e) {
-            var url_old = "~/Modules/Laser.Orchard.ContentExtension/View/DynamicProjectionDisplay/AjaxList.cshtml";
             var url = '@Url.Action("AjaxList", "DynamicProjectionDisplay", new { area = "Laser.Orchard.ContentExtension"})'
             $.ajax({
                 type: "GET",
@@ -30,8 +29,8 @@
 <form id="FormAjaxList" method="get">
     <input type='hidden' name='contentid' value='@Request.QueryString["contentid"]' />
     <input type='hidden' name='page' value='1' />
-    @if (!String.IsNullOrEmpty(Model.Form) || Model.FilterContent != null) {
-        if (!String.IsNullOrEmpty(Model.Form)) {
+    @if (!string.IsNullOrEmpty(Model.Form) || Model.FilterContent != null) {
+        if (!string.IsNullOrEmpty(Model.Form)) {
             @Html.Partial((string)(Model.Form))
         }
         if (Model.FilterContent != null) {
