--- a/src/Modules/Laser.Orchard.Cookies/Styles/cookiecuttr.css
+++ b/src/Modules/Laser.Orchard.Cookies/Styles/cookiecuttr.css
@@ -21,12 +21,7 @@
 }
 
 .cc-cookies a, .cc-cookies a:hover {
-    color: #fff;
     text-decoration: underline;
-}
-
-.cc-cookies a:hover {
-    text-decoration: none;
 }
 
 .cc-overlay {
@@ -53,7 +48,7 @@
     text-decoration: none;
     background: #00bee9;
     padding: 0.5em 0.75em;
-    border-radius: 3px;
+    border-radius: 0px;
     box-shadow: 0 0 2px rgba(0,0,0,0.25);
     text-shadow: 0 -1px 0 rgba(0,0,0,0.35);
     -o-transition: background 0.5s ease-in;
@@ -68,13 +63,6 @@
 
 .cc-cookies-reset a.cc-cookie-reset {
     background: #f15b00;
-}
-
-.cc-cookies a:hover.cc-cookie-accept, .cc-cookies-error a:hover.cc-cookie-accept, .cc-cookies a:hover.cc-cookie-decline, .cc-cookies-error a:hover.cc-cookie-decline, .cc-cookies-reset a:hover.cc-cookie-reset {
-    background: #000;
-    -o-transition: background 0.5s ease-in;
-    -webkit-transition: background 0.25s ease-in;
-    -moz-transition: background 0.25s ease-in;
 }
 
 .cc-cookies-error a.cc-cookie-accept, .cc-cookies-error a.cc-cookie-decline {
@@ -103,9 +91,81 @@
 .cc-cookie-frame {
     width: 90%;
     max-width:670px;
-    background-color:black;
+    background-color:#ccc;
+    border-radius:5px;
     top:0px;
     margin:0 auto;
+    padding:10px;
+}
+.cc-cookie-box {
+    background-color: black;
+    border-radius: 5px;
+    padding:10px;
+    margin:0px;
+    text-align:justify;
+    font-weight:normal;
+}
+
+.cc-cookie-box h3 {
+    text-align:center;
+    font-size:22px;
+    font-weight:700;
+}
+
+.cc-cookie-box p a {
+    font-weight:700;
+    line-height:15px;
+}
+
+.cc-cookie-box p {
+    text-align:justify;
+    margin-bottom: 10px;
+}
+
+.cc-cookie-box #ccPolicyMsgLink {
+    text-align:left;
+}
+
+.cc-cookie-box #ccPolicyMsgLink a:link {
+    color: inherit;
+    text-decoration: none
+}
+
+.cc-cookie-box #ccPolicyMsgLink a:visited {
+    color: inherit;
+    text-decoration: underline
+}
+
+.cc-cookie-box #ccPolicyMsgLink a:hover {
+    color: inherit;
+    text-decoration: underline
+}
+
+.cc-cookie-box #ccPolicyMsgLink a:active {
+    color: inherit;
+    text-decoration: none
+}
+
+.cc-cookie-checks {
+    float: left;
+    width: 100%;
+    margin-top: 15px;
+    padding: 10px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(222, 222, 222);
+    border-radius: 5px;
+    display: block;
+}
+
+a.cc-cookie-accept {
+    width:100%;
+    text-align:center;
+    font-weight:bold;
+}
+
+#ccPoweredBy {
+    text-align: right;
 }
 
 @media screen and (max-width: 768px) {
