--- a/src/Modules/Laser.Orchard.Cookies/Views/EditorTemplates/Parts/CookieLawWidgetSettings.cshtml
+++ b/src/Modules/Laser.Orchard.Cookies/Views/EditorTemplates/Parts/CookieLawWidgetSettings.cshtml
@@ -18,11 +18,19 @@
             <label for="CookieSettings_cookiePolicyLink">@T("Your privacy policy / Cookie policy link")</label>
             @Html.TextBoxFor(m => m.CookieLaw.cookiePolicyLink, new { @class = "text medium" })
         </div>
+        <div>
+            <label for="CookieSettings_cookiePolicyPageMessage">@T("Text of your privacy policy / Cookie policy link")</label>
+            @Html.TextBoxFor(m => m.CookieLaw.cookiePolicyPageMessage, new { @class = "text medium" })
+        </div>
     </div>
 </fieldset>
 
 <fieldset class="buttons">
     <legend style="margin-top: 30px; margin-bottom: 10px;">Buttons Text</legend>
+    <div>
+        <label for="CookieSettings_cookieAcceptButtonText">@T("Change 'Accept Cookies' button text")</label>
+        @Html.TextBoxFor(m => m.CookieLaw.cookieAcceptButtonText, new { @class = "text medium" })
+    </div>
     <div @(settings.showCookieResetButton ? "" : "style=display:none")>
         <label for="CookieSettings_cookieResetButtonText">@T("Change 'Reset Cookies' button text")</label>
         @Html.TextBoxFor(m => m.CookieLaw.cookieResetButtonText, new { @class = "text medium" })
