--- a/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
+++ b/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
@@ -8,6 +8,7 @@
 
     var settings = Model.CookieSettings;
     var part = Model.CookieLawPart;
+    var siteName = Model.siteName;
     var cookieResetButton = settings.showCookieResetButton.ToString().ToLower();
     var cookieDiscreetReset = settings.cookieDiscreetReset.ToString().ToLower();
 
@@ -41,16 +42,17 @@
     {
         if (settings.DisableCookieGDPRManagement == false)
         {
-    <script type = "text/javascript">
-    $(document).ready(function() {
-        var cookiesettings = { };
-        cookiesettings.cookieAnalytics = false;
-        if (@(part.cookieMessage.Length) > 0)
-            cookiesettings.cookieMessage = '@Html.Raw(part.cookieMessage.Replace(System.Environment.NewLine, "<br/>"))';
+<script type="text/javascript">
+$(document).ready(function() {
+    var cookiesettings = { };
+    //cookiesettings.cookieTitle = "@(((dynamic)part).Title)";
+    if (@(part.cookieMessage.Length) > 0)
+        cookiesettings.cookieMessage = '@Html.Raw(part.cookieMessage.Replace(System.Environment.NewLine, "<br/>"))';
         if ('@part.cookiePolicyLink'.length > 0)
             cookiesettings.cookiePolicyLink = '@part.cookiePolicyLink';
+        cookiesettings.cookieMessage = cookiesettings.cookieMessage + "<p id=\"ccPolicyMsgLink\"><a href=\"" + cookiesettings.cookiePolicyLink + "\">@part.cookiePolicyPageMessage</a></p>";
         // user options
-        cookiesettings.cookieMessage = cookiesettings.cookieMessage + '<form><div style="display:inline-block;margin:auto;clear:both;"><div style="float:left;margin:0 10px;">';
+        cookiesettings.cookieMessage = cookiesettings.cookieMessage + '<form><div style="display:inline-block;margin:auto;clear:both;width:100%"><div class="cc-cookie-checks">';
         cookiesettings.cookieMessage = cookiesettings.cookieMessage + '@Html.Raw(gdprScriptService.GetBannerChoices())';
         cookiesettings.cookieMessage = cookiesettings.cookieMessage + '</div></div></form>';
         // positioning
@@ -68,17 +70,16 @@
             cookiesettings.cookieResetButtonText = '@part.cookieResetButtonText';
         cookiesettings.cookieExpectedValue = "@Html.Raw(gdprScriptService.GetCurrentCookiePrefix())";
         cookiesettings.cookieAccepted = (@gdprScriptService.IsCookieAccepted() == 1);
-        if (@isPolicyPage)
-        {
+        if (@isPolicyPage) {
             cookiesettings.cookieOverlayEnabled = false;
         }
-        else
-        {
+        else {
             cookiesettings.cookieOverlayEnabled = @cookieOverlayEnabled;
         }
+        cookiesettings.cookiePoweredBy = "@siteName";
         $.cookieCuttr(cookiesettings);
     });
-    </script>
+</script>
         }
 
         foreach (var cookie in gdprScriptService.GetAllowedCookies())
