--- a/src/Modules/Laser.Orchard.Cookies/Styles/cookiecuttr.css
+++ b/src/Modules/Laser.Orchard.Cookies/Styles/cookiecuttr.css
@@ -122,28 +122,28 @@
     margin-bottom: 10px;
 }
 
-.cc-cookie-box #ccPolicyMsgLink {
+.cc-cookie-box p#ccPolicyMsgLink a:link {
+    color: #fff;
+    text-decoration: none
+}
+
+.cc-cookie-box p#ccPolicyMsgLink a:visited {
+    color: #fff;
+    text-decoration: underline
+}
+
+.cc-cookie-box p#ccPolicyMsgLink a:hover {
+    color: #fff;
+    text-decoration: underline
+}
+
+.cc-cookie-box p#ccPolicyMsgLink a:active {
+    color: #fff;
+    text-decoration: none
+}
+
+.cc-cookie-box p#ccPolicyMsgLink {
     text-align:left;
-}
-
-.cc-cookie-box #ccPolicyMsgLink a:link {
-    color: inherit;
-    text-decoration: none
-}
-
-.cc-cookie-box #ccPolicyMsgLink a:visited {
-    color: inherit;
-    text-decoration: underline
-}
-
-.cc-cookie-box #ccPolicyMsgLink a:hover {
-    color: inherit;
-    text-decoration: underline
-}
-
-.cc-cookie-box #ccPolicyMsgLink a:active {
-    color: inherit;
-    text-decoration: none
 }
 
 .cc-cookie-checks {
@@ -164,8 +164,11 @@ a.cc-cookie-accept {
     font-weight:bold;
 }
 
-#ccPoweredBy {
+p#ccPoweredBy, p#ccPoweredBy a:link, p#ccPoweredBy a:visited, p#ccPoweredBy a:hover, p#ccPoweredBy a:active {
     text-align: right;
+    color:#fff;
+    text-decoration:none;
+    font-weight:normal;
 }
 
 @media screen and (max-width: 768px) {
