--- a/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
+++ b/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
@@ -72,6 +72,7 @@ $(document).ready(function() {
         cookiesettings.cookieExpectedValue = "@Html.Raw(gdprScriptService.GetCurrentCookiePrefix())";
         cookiesettings.cookieAccepted = (@gdprScriptService.IsCookieAccepted() == 1);
         if (@isPolicyPage) {
+            cookiesettings.cookiePolicyPage = true;
             cookiesettings.cookieOverlayEnabled = false;
         }
         else {
