--- a/src/Modules/Laser.Orchard.Cookies/Styles/cookiecuttr.css
+++ b/src/Modules/Laser.Orchard.Cookies/Styles/cookiecuttr.css
@@ -1,8 +1,6 @@
 /* To be used with cookieCuttr by Chris Wharton (http://cookiecuttr.com) */
-
-/*TODO: risolvere il problema per cui, se la pagina è più lunga dello schermo, la barra si sovrappone al fondo della pagina*/
-
-.cc-cookies, .cc-cookies-reset {
+/* Modified by Laser */
+.cc-cookies {
     position: fixed;
     width: 100%;
     left: 0;
@@ -30,19 +28,7 @@
     padding-top: 15vh;
 }
 
-.cc-cookies-error {
-    float: left;
-    width: 90%;
-    text-align: center;
-    margin: 1em 0 2em 0;
-    background: #fff;
-    padding: 2em 5%;
-    border: 1px solid #ccc;
-    font-size: 18px;
-    color: #333;
-}
-
-.cc-cookies a.cc-cookie-accept, .cc-cookies-error a.cc-cookie-accept, .cc-cookies a.cc-cookie-decline, .cc-cookies-error a.cc-cookie-decline, .cc-cookies-reset a.cc-cookie-reset {
+.cc-cookies a.cc-cookie-accept {
     display: inline-block;
     color: #fff;
     text-decoration: none;
@@ -56,36 +42,32 @@
     -moz-transition: background 0.25s ease-in;
 }
 
-.cc-cookies a.cc-cookie-decline, .cc-cookies-error a.cc-cookie-decline {
-    background: #af3b3b;
-    margin-left: 0.5em;
-}
-
-.cc-cookies-reset a.cc-cookie-reset {
-    background: #f15b00;
-}
-
-.cc-cookies-error a.cc-cookie-accept, .cc-cookies-error a.cc-cookie-decline {
-    display: block;
-    margin-top: 1em;
-}
-
-.cc-cookies.cc-discreet, .cc-cookies-reset.cc-discreet {
+.cc-cookies.cc-discreet {
     width: auto;
     padding: 0.5em 1em;
     left: auto;
     top: auto;
 }
 
-.cc-cookies-reset.cc-discreet a.cc-cookie-reset {
-    background: none;
-    text-shadow: none;
-    padding: 0;
-    text-decoration: underline;
+.cc-cookies-reset a.cc-cookie-reset {
+    color:#fff;
 }
 
-.cc-cookies-reset.cc-discreet a:hover.cc-cookie-reset {
+.cc-cookies-reset a:hover.cc-cookie-reset {
     text-decoration: none;
+}
+
+.cc-cookies-reset {
+    background-color: #000;
+    width: 100%;
+    position: sticky;
+    left: 0;
+    padding:5px;
+}
+.cc-cookies-reset.cc-discreet {
+    width:auto;
+    display:inline-block;
+    margin-left:10px;
 }
 
 .cc-cookie-frame {
@@ -183,7 +165,7 @@ p#ccPoweredBy, p#ccPoweredBy a:link, p#ccPoweredBy a:visited, p#ccPoweredBy a:ho
 }
 
 @media screen and (max-width: 768px) {
-    .cc-cookies a.cc-cookie-accept, .cc-cookies a.cc-cookie-decline, .cc-cookies-reset a.cc-cookie-reset {
+    .cc-cookies a.cc-cookie-accept, .cc-cookies-reset a.cc-cookie-reset {
         display: block;
         margin: 0;
     }
