fixed cookie banner

--- a/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
+++ b/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
@@ -15,7 +15,7 @@
 
     // banner position
     var cookieBannerPosition = "overlay";
-    switch (settings.cookiePosition)
+    switch ((CookieBannerPosition)settings.cookiePosition)
     {
         case CookieBannerPosition.Top:
             cookieBannerPosition = "top";
