fixed default values for widget settings added banner title setting

--- a/src/Modules/Laser.Orchard.Cookies/Views/EditorTemplates/Parts.Cookie.Settings.cshtml
+++ b/src/Modules/Laser.Orchard.Cookies/Views/EditorTemplates/Parts.Cookie.Settings.cshtml
@@ -19,7 +19,7 @@
 <fieldset class="position">
     <div>
         <label for="CookieSettings_cookiePosition">@T("Position of the Cookie Banner")</label>
-        @Html.EnumDropDownListFor(m => m.cookiePosition, CookieBannerPosition.Overlay)
+        @Html.EnumDropDownListFor(m => m.cookiePosition)
         <span class="hint">@T("The position of the Cookie Banner.")</span>
     </div>
 </fieldset>
