--- a/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
+++ b/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
@@ -38,35 +38,36 @@
 <script type="text/javascript">
 $(document).ready(function() {
     var cookiesettings = { };
-    //cookiesettings.cookieTitle = "@(((dynamic)part).Title)";
+    if (@(part.cookieTitle.Length) > 0)
+        cookiesettings.cookieTitle = '@part.cookieTitle';
     if (@(part.cookieMessage.Length) > 0)
         cookiesettings.cookieMessage = '@Html.Raw(part.cookieMessage.Replace(System.Environment.NewLine, "<br/>"))';
-        if ('@part.cookiePolicyLink'.length > 0)
-            cookiesettings.cookiePolicyLink = '@part.cookiePolicyLink';
-        cookiesettings.cookieMessage = cookiesettings.cookieMessage + "<p id=\"ccPolicyMsgLink\"><a href=\"" + cookiesettings.cookiePolicyLink + "\">@part.cookiePolicyPageMessage</a></p>";
-        // user options
-        cookiesettings.cookieMessage = cookiesettings.cookieMessage + '<form><div style="display:inline-block;margin:auto;clear:both;width:100%"><div class="cc-cookie-checks">';
-        cookiesettings.cookieMessage = cookiesettings.cookieMessage + '@Html.Raw(gdprScriptService.GetBannerChoices())';
-        cookiesettings.cookieMessage = cookiesettings.cookieMessage + '</div></div></form>';
-        // positioning
-        cookiesettings.cookieDiscreetReset = @cookieDiscreetReset;
-        // buttons
-        cookiesettings.cookieAcceptButton = true;
-        if ('@part.cookieAcceptButtonText'.length > 0)
-            cookiesettings.cookieAcceptButtonText = '@part.cookieAcceptButtonText';
-        cookiesettings.cookieResetButton = @cookieResetButton;
-        if ('@part.cookieResetButtonText'.length > 0)
-            cookiesettings.cookieResetButtonText = '@part.cookieResetButtonText';
-        cookiesettings.cookieExpectedValue = "@Html.Raw(gdprScriptService.GetCurrentCookiePrefix())";
-        cookiesettings.cookieAccepted = (@gdprScriptService.IsCookieAccepted() == 1);
-        if (@isPolicyPage) {
-            cookiesettings.cookiePolicyPage = true;
-        }
-        cookiesettings.cookieBannerPosition = "@cookieBannerPosition";
-        cookiesettings.cookiePoweredBy = "@siteName";
-        cookiesettings.cookiePoweredByIcon = "@iconUrl";
-        $.cookieCuttr(cookiesettings);
-    });
+    if ('@part.cookiePolicyLink'.length > 0)
+        cookiesettings.cookiePolicyLink = '@part.cookiePolicyLink';
+    cookiesettings.cookieMessage = cookiesettings.cookieMessage + "<p id=\"ccPolicyMsgLink\"><a href=\"" + cookiesettings.cookiePolicyLink + "\">@part.cookiePolicyPageMessage</a></p>";
+    // user options
+    cookiesettings.cookieMessage = cookiesettings.cookieMessage + '<form><div style="display:inline-block;margin:auto;clear:both;width:100%"><div class="cc-cookie-checks">';
+    cookiesettings.cookieMessage = cookiesettings.cookieMessage + '@Html.Raw(gdprScriptService.GetBannerChoices())';
+    cookiesettings.cookieMessage = cookiesettings.cookieMessage + '</div></div></form>';
+    // positioning
+    cookiesettings.cookieDiscreetReset = @cookieDiscreetReset;
+    // buttons
+    cookiesettings.cookieAcceptButton = true;
+    if ('@part.cookieAcceptButtonText'.length > 0)
+        cookiesettings.cookieAcceptButtonText = '@part.cookieAcceptButtonText';
+    cookiesettings.cookieResetButton = @cookieResetButton;
+    if ('@part.cookieResetButtonText'.length > 0)
+        cookiesettings.cookieResetButtonText = '@part.cookieResetButtonText';
+    cookiesettings.cookieExpectedValue = "@Html.Raw(gdprScriptService.GetCurrentCookiePrefix())";
+    cookiesettings.cookieAccepted = (@gdprScriptService.IsCookieAccepted() == 1);
+    if (@isPolicyPage) {
+        cookiesettings.cookiePolicyPage = true;
+    }
+    cookiesettings.cookieBannerPosition = "@cookieBannerPosition";
+    cookiesettings.cookiePoweredBy = "@siteName";
+    cookiesettings.cookiePoweredByIcon = "@iconUrl";
+    $.cookieCuttr(cookiesettings);
+});
 </script>
         }
 
